# Open_Image_Editor

./: .clang-format  .editorconfig  .gitignore  AppConfig.txt  CMakeLists.txt  CNAME  CTestConfig.cmake  Doxyfile  LICENSE  README.md  SECURITY.md  _app_config_8hpp_source.html  _async_deque_8hpp_source.html  _async_progress_bar_8hpp_source.html  _async_vector_8hpp_source.html  _box_8hpp_source.html  _clickable_label_8hpp_source.html  _const_8hpp_source.html  _conversion_8hpp_source.html  _data_8hpp_source.html  _detect_objects_model_8hpp_source.html  _download_8hpp_source.html  _face_recognition_8hpp_source.html  _file_selector_8hpp_source.html  _folders_8hpp_source.html  _image_booth_8hpp_source.html  _image_data_8hpp_source.html  _image_editor_8hpp_source.html  _images_data_8hpp_source.html  _initial_window_8hpp_source.html  _load_image_8hpp_source.html  _main_8hpp_source.html  _main_image_8hpp_source.html  _main_window_8hpp_source.html  _meta_data_8hpp_source.html  _network_8hpp_source.html  _object_recognition_8hpp_source.html  _recover_8hpp_source.html  _sizes_8hpp_source.html  _text_8hpp_source.html  (+160 more)
.github/: FUNDING.yml
1.0.10/: _app_config_8hpp_source.html  _clickable_folder_label_8hpp_source.html  _const_8hpp_source.html  _conversion_8hpp_source.html  _detect_objects_model_8hpp_source.html  _faces_recognition_8hpp_source.html  _g_p_s___conversion_8hpp_source.html  _gimp_8hpp_source.html  _image_booth_8hpp_source.html  _image_data_8hpp_source.html  _image_editor_8hpp_source.html  _loading_status_8hpp_source.html  _main_image_8hpp_source.html  _main_window_8hpp_source.html  _map_widget_8hpp_source.html  _meta_data_8hpp_source.html  _option_8hpp_source.html  _sizes_8hpp_source.html  _thread_manager_8hpp_source.html  _translation_8hpp_source.html  _verification_8hpp_source.html  annotated.html  annotated_dup.js  class_actions-members.html  class_actions.html  class_async_deque-members.html  class_async_progress_bar-members.html  class_async_progress_bar.html  class_async_vector.html  class_clickable_folder_label.html  class_clickable_folder_label.js  class_clickable_label-members.html  class_clickable_label.html  class_conversion_dialog.html  class_data-members.html  class_data.js  class_detect_objects_model.html  class_detect_objects_model.js  class_detected_faces-members.html  class_detected_faces.html  (+58 more)
1.1.0/: _app_config_8hpp_source.html  _async_deque_8hpp_source.html  _async_progress_bar_8hpp_source.html  _async_vector_8hpp_source.html  _box_8hpp_source.html  _clickable_folder_label_8hpp_source.html  _clickable_label_8hpp_source.html  _const_8hpp_source.html  _conversion_8hpp_source.html  _data_8hpp_source.html  _detect_objects_model_8hpp_source.html  _download_8hpp_source.html  _faces_recognition_8hpp_source.html  _file_selector_8hpp_source.html  _folders_8hpp_source.html  _g_p_s___conversion_8hpp_source.html  _gimp_8hpp_source.html  _image_booth_8hpp_source.html  _image_data_8hpp_source.html  _image_editor_8hpp_source.html  _image_label_8hpp_source.html  _images_data_8hpp_source.html  _initial_window_8hpp_source.html  _load_image_8hpp_source.html  _loading_status_8hpp_source.html  _main_image_8hpp_source.html  _main_window_8hpp_source.html  _map_widget_8hpp_source.html  _meta_data_8hpp_source.html  _network_8hpp_source.html  _object_recognition_8hpp_source.html  _option_8hpp_source.html  _recover_8hpp_source.html  _sizes_8hpp_source.html  _text_8hpp_source.html  _thread_manager_8hpp_source.html  _translation_8hpp_source.html  _verification_8hpp_source.html  annotated.html  annotated_dup.js  (+130 more)
cmake/: FindExiv2.cmake
data/: structure.cpp  structure.h
docs/: _app_config_8hpp_source.html  _box_8hpp_source.html  _clickable_label_8hpp_source.html  _const_8hpp_source.html  _conversion_8hpp_source.html  _data_8hpp_source.html  _face_recognition_8hpp_source.html  _file_selector_8hpp_source.html  _folders_8hpp_source.html  _image_booth_8hpp_source.html  _image_data_8hpp_source.html  _image_editor_8hpp_source.html  _images_data_8hpp_source.html  _initial_window_8hpp_source.html  _load_image_8hpp_source.html  _main_8hpp_source.html  _main_image_8hpp_source.html  _main_window_8hpp_source.html  _map_widget_8hpp_source.html  _meta_data_8hpp_source.html  _option_8hpp_source.html  _sizes_8hpp_source.html  _text_8hpp_source.html  _verification_8hpp_source.html  annotated.html  annotated_dup.js  class_clickable_label-members.html  class_clickable_label.html  class_const.js  class_const_1_1_orientation.html  class_const_1_1_rotation-members.html  class_const_1_1_rotation.html  class_conversion_dialog-members.html  class_conversion_dialog.html  class_conversion_dialog.js  class_data-members.html  class_data.html  class_data.js  class_detected_objects-members.html  class_detected_objects.html  (+69 more)
edit/: compile.bat  compile.sh  lrelease.bat  release.bat  release.sh
include/: AppConfig.hpp  AsyncDeque.hpp  AsyncProgressBar.hpp  AsyncVector.hpp  Box.hpp  ClickableFolderLabel.hpp  ClickableLabel.hpp  Const.hpp  Conversion.hpp  Data.hpp  Database.hpp  Date.hpp  DetectObjectsModel.hpp  Download.hpp  FaceRecognition.hpp  FacesRecognition.hpp  FileSelector.hpp  Folders.hpp  GPS_Conversion.hpp  Gimp.hpp  ImageBooth.hpp  ImageData.hpp  ImageEditor.hpp  ImageLabel.hpp  ImagesData.hpp  InitialWindow.hpp  LoadImage.hpp  LoadingStatus.hpp  Main.hpp  MainImage.hpp  MainWindow.hpp  MapDialog.hpp  MapWidget.hpp  MetaData.hpp  Network.hpp  ObjectRecognition.hpp  Option.hpp  Recover.hpp  Sizes.hpp  Text.hpp  (+8 more)
install/: installateur.nsi  nsis_variables.nsh  nsis_variables.nsh.in  start.bat
latex/: md__r_e_a_d_m_e.tex  md__s_e_c_u_r_i_t_y.tex  refman.tex
lib/: moc_imageEditor.cpp
mapWindow/: MapWindow.cpp  MapWindow.h  (+1 more)
tests/: CMakeLists.txt  TestConst.hpp  test_GPS_Consersion.cpp  test_box.cpp  test_conversion.cpp  test_data.cpp  test_database.cpp  test_faceRecognition.cpp  test_folders.cpp  test_imageData.cpp  test_loadImage.cpp  test_main.cpp  test_metaData.cpp  test_objectRecognition.cpp  test_threadManeger.cpp  test_verification.cpp
tests/ressources/images/: heic.heic  heif.heif  tiff.tiff
(+338 files in other folders)
